--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Add</string>
     <string name="chat_room_name">Chat Room Name</string>
+    <string name="username">UserName</string>
+    <string name="send">Send</string>
+    <string name="write_text">write text</string>
 </resources>
